syntax = "proto3";
option java_multiple_files = true;
package mentoring.ratingservice.grpcgateway;
import "google/protobuf/wrappers.proto";

message RateRequest {
  int64 employeeId = 1;
  int64 courseId = 2;
  int32 stars = 3;
}

message RateResponse {
  int32 stars = 1;
}

service RatingService {
  rpc rate(RateRequest) returns (RateResponse);
}